--- a/gtk/theme/Adwaita/gtk-contained-dark.css
+++ b/gtk/theme/Adwaita/gtk-contained-dark.css
@@ -1982,11 +1982,13 @@ popover.emoji-picker emoji { font-size: x-large; padding: 6px; border-radius: 6p
 
 popover.emoji-picker emoji:hover { background: #15539e; }
 
-popover.emoji-completion contents row box { border-spacing: 10px; padding: 2px 10px; }
+emoji-completion-row box { border-spacing: 10px; padding: 2px 10px; }
 
-popover.emoji-completion emoji:hover { background-color: #424242; }
+emoji-completion-row:focus, emoji-completion-row:hover { background-color: #15539e; color: #ffffff; }
 
-popover.entry-completion contents { padding: 0; }
+emoji-completion-row emoji:focus, emoji-completion-row emoji:hover { background-color: #424242; }
+
+popover.entry-completion > contents { padding: 0; }
 
 menubar { padding: 0px; box-shadow: inset 0 -1px rgba(0, 0, 0, 0.1); }
 
